[gd_scene load_steps=12 format=2]

[ext_resource path="res://NewSprite/Heart_entity.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Heart.gd" type="Script" id=2]
[ext_resource path="res://Music and Sounds/LTTP_Item.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=79]
animations = [ {
"frames": [ SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=80]
radius = 5.0

[node name="Heart" type="Node2D"]
position = Vector2( 0, -1 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.625, 0.625001 )
frames = SubResource( 79 )
frame = 5
playing = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -1 )
shape = SubResource( 80 )

[node name="HeartPickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 1.0

[node name="Despawn" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Despawn" to="." method="_on_Despawn_timeout"]
